v2/internal/nsz.repo.hu/libc-test/src/api/unistd.o.err
src/api/unistd.c: In function ‘f’:
src/api/unistd.c:87:3: error: ‘_CS_POSIX_V7_THREADS_CFLAGS’ undeclared (first use in this function); did you mean ‘_CS_POSIX_V7_LP64_OFF64_CFLAGS’?
   87 | C(_CS_POSIX_V7_THREADS_CFLAGS)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src/api/unistd.c:5:21: note: in definition of macro ‘C’
    5 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/unistd.c:87:3: note: each undeclared identifier is reported only once for each function it appears in
   87 | C(_CS_POSIX_V7_THREADS_CFLAGS)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src/api/unistd.c:5:21: note: in definition of macro ‘C’
    5 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/unistd.c:88:3: error: ‘_CS_POSIX_V7_THREADS_LDFLAGS’ undeclared (first use in this function); did you mean ‘_CS_POSIX_V7_LP64_OFF64_LDFLAGS’?
   88 | C(_CS_POSIX_V7_THREADS_LDFLAGS)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/api/unistd.c:5:21: note: in definition of macro ‘C’
    5 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/unistd.c:117:3: error: ‘_PC_TIMESTAMP_RESOLUTION’ undeclared (first use in this function)
  117 | C(_PC_TIMESTAMP_RESOLUTION)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
src/api/unistd.c:5:21: note: in definition of macro ‘C’
    5 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/unistd.c:238:3: error: ‘_SC_XOPEN_UUCP’ undeclared (first use in this function); did you mean ‘_SC_XOPEN_UNIX’?
  238 | C(_SC_XOPEN_UUCP)
      |   ^~~~~~~~~~~~~~
src/api/unistd.c:5:21: note: in definition of macro ‘C’
    5 | #define C(n) switch(n){case n:;}
      |                     ^
src/api/unistd.c:331:39: error: ‘crypt’ undeclared (first use in this function)
  331 | {char*(*p)(const char*,const char*) = crypt;}
      |                                       ^~~~~
src/api/unistd.c:332:25: error: ‘encrypt’ undeclared (first use in this function)
  332 | {void(*p)(char[],int) = encrypt;}
      |                         ^~~~~~~
exit status 1
